# profile

./: .actrc  .all-contributorsrc  .editorconfig  .gitattributes  .gitignore  .megalinter.yml  .pre-commit-config.yaml  .secrets.example  CHANGELOG.md  CONSOLIDATION_SUMMARY.md  CONTRIBUTING.md  GITHUB_MARKDOWN_AUDIT_COMPLETE.md  IMPLEMENTATION_ACT_SUPPORT.md  IMPLEMENTATION_SUMMARY.md  PERFORMANCE_IMPROVEMENTS_SUMMARY.md  PULL_REQUEST_SUMMARY.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_REPORT.md  REPORT.md  SECURITY_SUMMARY.md  SECURITY_SUMMARY_API_RESILIENCE.md  SECURITY_SUMMARY_QUOTE_CARD.md  SECURITY_SUMMARY_REFACTORING.md  mypy.ini  notes.md  package-lock.json  package.json  poetry.toml  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: Dockerfile.todo  devcontainer.json  postCreate.sh
.github/: CODEOWNERS
assets/: metadata.json
cached/: location.json
config/: META6.json  lychee.toml  phpstan.neon.dist  pyrightconfig.json  terrascan-config.toml  theme.json  trivy.yaml
dashboard-app/: package-lock.json  package.json  vite.config.ts
data/: timezone.json
developer/: stats.json
docs/: API_RESILIENCE.md  API_TIMEOUT_RETRY_GUIDE.md  CACHING_BENCHMARKS.md  CACHING_QUICK_REFERENCE.md  ENGINE_ARCHITECTURE.md  INTEGRATION_EXAMPLE.md  LOCAL_DEVELOPMENT.md  LOCATION_CARD_CHANGES.md  LOCATION_DIAGNOSTICS.md  MODULAR_ARCHITECTURE.md  MONITORING.md  OPTIMIZATION_GUIDE.md  QUOTE_CARD.md  README_LAYOUT_BEFORE_AFTER.md  README_LAYOUT_CHANGELOG.md  README_SECTION_CHANGES.md  RELEASES.md  ROBUSTNESS_IMPROVEMENTS.md  SVG_SANITIZATION.md  TROUBLESHOOTING.md  UNIFIED_WORKFLOW_MIGRATION.md  WORKFLOWS.md  WORKFLOW_CACHING.md  architecture.md  cards.md  markdown_valid_elements.md  style-guide.md  suggestions.md  workflows.md  workflows.md.bak
engine/: MIGRATION.md  README.md  SUMMARY.md  pyproject.toml
engine/profile_engine/: __init__.py  api.py  cli.py
engine/profile_engine/clients/: __init__.py  github.py  oura.py  quote.py  soundcloud.py  weather.py
engine/profile_engine/generators/: __init__.py  card_generator.py
engine/profile_engine/models/: developer.py  oura.py  quote.py  soundcloud.py  weather.py
engine/profile_engine/services/: data_service.py
engine/profile_engine/theme/: __init__.py  loader.py
engine/profile_engine/utils/: sanitize_svg.py  weather_alerts.py
engine/tests/: test_cli.py  test_models.py  test_sanitize_svg.py
footer/: README.md  footer.html
location/: debug_nominatim_response.txt  location.json
oura/: health_snapshot.json  metrics.json  mood.json
quotes/: quote.json  quote_analysis.json
schemas/: README.md  developer-stats.schema.json  health-snapshot.schema.json  oura-metrics.schema.json  soundcloud-track.schema.json  theme.schema.json  weather.schema.json
scripts/: act-test.sh  analyze_quote.py  audit_megalinter_config.py  comprehensive-audit.py  dev-mode.sh  fetch-developer-stats.py  fetch-location.sh  fetch-oura.sh  fetch-soundcloud.sh  fetch-timezone.sh  fetch-weather.sh  fetch_quote.sh  generate-card.py  generate-consolidated-dashboard.py  generate-developer-dashboard.py  generate-fallback-map.py  generate-health-dashboard.py  generate-health-snapshot.py  generate-interactive-dashboard.py  generate-location-card.py  generate-oura-mood-card.py  generate-status-page.py  generate-summary-card.py  generate-themed-dashboard.py  generate-weather-card.py  generate_megalinter_summary.py  generate_quote_card.py  health_check.sh  incremental-generate.py  inject-footer.py  lint-markdown-images.py  log_summary.py  new-card.sh  oura-mood-engine.py  oura_mood_engine.py  record-workflow-metrics.py  store-historical-snapshot.py  update-readme.py  update_readme.py  validate-data-quality.py
tests/: __init__.py  test_cache.sh  test_card_generators.py  test_change_detection.py  test_data_quality.py  test_developer_dashboard.py  test_fallback.py  test_health_checks.sh  test_lint_markdown_images.py  test_location_diagnostics.py  test_location_shell_diagnostics.sh  test_log_summary.py  test_mapbox_integration.py  test_metrics.py  test_new_card.sh  test_quote_card.py  test_retry_logic.sh  test_theme_validation.py  test_time_utils.py  test_timeout_coverage.sh  test_utils.py
weather/: weather.json
(+229 files in other folders)
